[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Images/ENEMIES/Mini.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Modules/Visibility_module.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.643137, 0.25098, 0.0235294, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )
border_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="Enemy" type="KinematicBody2D" groups=["ENEMY", "Mini"]]
collision_layer = 6
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]
input_pickable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D"]
polygon = PoolVector2Array( -13, 6, -13, -6, -8, -13, -2, -13, 3, -12, 6, -6, 12, -2, 12, 2, 6, 6, 3, 12, -2, 13, -8, 13 )

[node name="POINTS_HANDLER" type="Node2D" parent="Sprite"]

[node name="POINT" type="Node2D" parent="Sprite/POINTS_HANDLER"]
position = Vector2( 16, 0 )

[node name="PARTICLES_HANDLER" type="Node2D" parent="Sprite"]
position = Vector2( -36, 0 )

[node name="PARTICLES_POINT" type="Node2D" parent="Sprite/PARTICLES_HANDLER"]
position = Vector2( 21, 0 )

[node name="Progress" type="ProgressBar" parent="."]
visible = false
margin_left = -16.0
margin_top = 32.0
margin_right = 16.0
margin_bottom = 35.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Visibility_module" parent="." instance=ExtResource( 3 )]
position = Vector2( -9.53674e-07, 1.43051e-06 )
scale = Vector2( 1.6, 1.6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -13, 6, -13, -6, -8, -13, -2, -13, 3, -12, 6, -6, 12, -2, 12, 2, 6, 6, 3, 12, -2, 13, -8, 13 )

[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
